--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2022-05-12 Franz Holzinger <franz@ttproducts.de>
+    * backwards compatibility: Use the first value of a payment/shipping setup as active, if the user did not select anything before.
+
 2022-05-04 Franz Holzinger <franz@ttproducts.de>
     * remove outdated XCLASS
 
