--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2022-06-01 Franz Holzinger <franz@ttproducts.de>
+    * TYPO3 Routing: replace src="clear.gif" by src="/clear.gif"
+
 2022-05-19 Franz Holzinger <franz@ttproducts.de>
     * fix issues with wrong usage of double question mark ?? (Null Coalescing) operator
     * fix PHP 8 issues
