--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2022-06-15 Franz Holzinger <franz@ttproducts.de>
+    * bugfix: Backend order data need TypoScript which is based on the id in the page browser
+
 2022-06-01 Franz Holzinger <franz@ttproducts.de>
     * TYPO3 Routing: replace src="clear.gif" by src="/clear.gif"
 
