--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -78,6 +78,9 @@
 			<trans-unit id="tt_products.ean" resname="tt_products.ean">
 				<source>EAN Code:</source>
 			</trans-unit>
+			<trans-unit id="tt_products.doi" resname="tt_products.doi">
+				<source>Digital Object Identifier:</source>
+			</trans-unit>
 			<trans-unit id="tt_products.shipping_point" resname="tt_products.shipping_point">
 				<source>Shipping point:</source>
 			</trans-unit>
@@ -406,7 +409,7 @@
 				<source>Product attribute using it.</source>
 			</trans-unit>
 			<trans-unit id="tt_products_attribute_mm_graduated_price.uid_foreign" resname="tt_products_attribute_mm_graduated_price.uid_foreign">
-				<source>Price formula.</source>
+				<source>Price formula</source>
 			</trans-unit>
 			<trans-unit id="tt_products_emails" resname="tt_products_emails">
 				<source>Products emails</source>
@@ -508,10 +511,10 @@
 				<source>Product using it.</source>
 			</trans-unit>
 			<trans-unit id="tt_products_mm_graduated_price.graduated_price_uid" resname="tt_products_mm_graduated_price.graduated_price_uid">
-				<source>Price formula.</source>
+				<source>Price formula</source>
 			</trans-unit>
 			<trans-unit id="tt_products_mm_graduated_price.uid_foreign" resname="tt_products_mm_graduated_price.uid_foreign">
-				<source>Price formula.</source>
+				<source>Price formula</source>
 			</trans-unit>
 			<trans-unit id="tt_products_products_mm_articles" resname="tt_products_products_mm_articles">
 				<source>Relation products to articles</source>
