--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2023-01-20 Franz Holzinger <franz@ttproducts.de>
+    * use new image folder Resources/Public/Images instead of res/icons/fe.
+
 2022-12-13 Franz Holzinger <franz@ttproducts.de>
     * feature: Support to have no payment selector if only one payment option is available.
     * bugfix: automatic bill generation
