--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2023-03-08 Franz Holzinger <franz@ttproducts.de>
+    * compatibility: replace class tx_div2007_staticinfotables by JambageCom\Div2007\Utility\StaticInfoTablesUtility.
+
 2023-01-20 Franz Holzinger <franz@ttproducts.de>
     * use new image folder Resources/Public/Images instead of res/icons/fe.
 
