--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+
+2023-03-09 Franz Holzinger <franz@ttproducts.de>
+    * compatibility Deprecation no.92947: replace TYPO3_MODE by TYPO3 
+
 2023-03-08 Franz Holzinger <franz@ttproducts.de>
     * compatibility: replace class tx_div2007_staticinfotables by JambageCom\Div2007\Utility\StaticInfoTablesUtility.
 
