--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2023-03-11 Franz Holzinger <franz@ttproducts.de>
+    * bugfix: datasheet_uid in front end
 
 2023-03-09 Franz Holzinger <franz@ttproducts.de>
     * compatibility Deprecation no.92947: replace TYPO3_MODE by TYPO3 
