--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2023-06-23 Franz Holzinger <franz@ttproducts.de>
+    * fix #193 : fe_group varchar(255)
+
 2023-03-11 Franz Holzinger <franz@ttproducts.de>
     * bugfix: datasheet_uid in front end
 
