--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2024-02-14 Franz Holzinger <franz@ttproducts.de>
+    * move template files into Resources/Private/Templates
+
 2023-11-06 Franz Holzinger <franz@ttproducts.de>
     * compatibility: MySQL strict mode
 
