--- a/Resources/Private/Language/locallang_marker.xlf
+++ b/Resources/Private/Language/locallang_marker.xlf
@@ -570,6 +570,9 @@
 			<trans-unit id="p_checkbox1_value" resname="p_checkbox1_value">
 				<source>Checkbox 1 Value</source>
 			</trans-unit>
+			<trans-unit id="p_direct_download" resname="p_direct_download">
+				<source>Direct Download here</source>
+			</trans-unit>
 			<trans-unit id="list_buy_now" resname="list_buy_now">
 				<source>Into the shopping cart.</source>
 			</trans-unit>
@@ -983,6 +986,9 @@
 			</trans-unit>
 			<trans-unit id="tracking_status_message_subject" resname="tracking_status_message_subject">
 				<source>Select subject:</source>
+			</trans-unit>
+			<trans-unit id="tracking_status_message_0" resname="tracking_status_message_0">
+				<source>idle</source>
 			</trans-unit>
 			<trans-unit id="tracking_status_message_1" resname="tracking_status_message_1">
 				<source>Customer order sent</source>
