--- a/Resources/Private/Language/Modfunc/locallang_modfunc3_csh.xlf
+++ b/Resources/Private/Language/Modfunc/locallang_modfunc3_csh.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
    <file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/Modfunc/locallang_modfunc3_csh.xlf" date="2017-07-08T17:08:00Z" product-name="import">
 		<header/>
 		<body>
@@ -9,7 +9,7 @@
             <trans-unit id="tt_products.func3.alttitle" resname="tt_products.func3.alttitle">
                 <source>Import FAL wizard for tt_products tables</source>
             </trans-unit>
-            <trans-unit id="tt_products.func3.description" xml:space="preserve" resname="tt_products.func3.description" xml:space="preserve">
+            <trans-unit id="tt_products.func3.description" resname="tt_products.func3.description">
                 <source>Enables you to import the images into FAL for all tables of tt_products.</source>
             </trans-unit>
         </body>
